--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.5",
     "sequelize": "^6.37.7"
   },
@@ -21,4 +22,3 @@
     "sequelize-cli": "^6.6.3"
   }
 }
-
