--- a/.env.example
+++ b/.env.example
@@ -32,9 +32,8 @@ API_URL=http://localhost:3000/api/
 #DEBUG
 DEBUG=true
 
-#seeder
 #seeder 
 ADMIN_USER_NAME=user_name
-ADMIN_PASSWORD=xxxxxxxx
+ADMIN_PASSWORD=xxxxx
 ADMIN_ROLE_ID=
 ADMIN_POSITION_ID=
