--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@ build/
 # OS files
 .DS_Store
 Thumbs.db
+
+all_lab_in_project_anc.sql
+coveragesite_in_22.sql
+INSERT INTO pathopat (.sql
+Untitled-1.sql
+Untitled-2.sql
+Untitled-3.sql
+Untitled-4.sql
