--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ STRIPE_SECRET_KEY=xxxxx
 GOOGLE_CLIENT_ID=xxxxx
 GOOGLE_CLIENT_SECRET=xxxxx
 EXTERNAL_API_KEY=abcdef123456
-API_URL=http://localhost:3000/api/
+API_URL=http://localhost:3000/api
 
 #DEBUG
 DEBUG=true
